# anagram-analyzer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  prompt.md  pyproject.toml  renovate.json  tasks.md
.github/workflows/: android-release.yml  android-ui-tests.yml  ci.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/androidTest/java/com/anagram/analyzer/data/seed/: AssetSeedEntryLoaderInstrumentedTest.kt
android/app/src/androidTest/java/com/anagram/analyzer/ui/screen/: MainScreenTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: anagram_additional_seed.tsv  anagram_seed.tsv  candidate_detail_seed.tsv
android/app/src/main/java/com/anagram/analyzer/: AnagramApplication.kt  MainActivity.kt
android/app/src/main/java/com/anagram/analyzer/data/datastore/: InputHistoryStore.kt  QuizScoreStore.kt  SearchSettingsStore.kt  SettingsDataStore.kt  ThemePreferenceStore.kt
android/app/src/main/java/com/anagram/analyzer/data/db/: AnagramDao.kt  AnagramDatabase.kt  AnagramEntry.kt  CandidateDetailCacheDao.kt  CandidateDetailCacheEntry.kt
android/app/src/main/java/com/anagram/analyzer/data/seed/: AssetAdditionalSeedEntryLoader.kt  AssetCandidateDetailLoader.kt  AssetSeedEntryLoader.kt  JishoCandidateDetailRemoteDataSource.kt
android/app/src/main/java/com/anagram/analyzer/di/: AppModule.kt
android/app/src/main/java/com/anagram/analyzer/domain/model/: HiraganaNormalizer.kt  PreloadLogger.kt  QuizDifficulty.kt  QuizQuestion.kt
android/app/src/main/java/com/anagram/analyzer/domain/usecase/: ApplyAdditionalDictionaryUseCase.kt  GenerateQuizUseCase.kt  LoadCandidateDetailUseCase.kt  PreloadSeedUseCase.kt  SearchAnagramUseCase.kt
android/app/src/main/java/com/anagram/analyzer/ui/screen/: CandidateDetailScreen.kt  MainScreen.kt  QuizScreen.kt  SettingsDialog.kt  ShareUtil.kt
android/app/src/main/java/com/anagram/analyzer/ui/viewmodel/: MainUiState.kt  MainViewModel.kt  QuizUiState.kt  QuizViewModel.kt
android/tools/seed-generator/: build.gradle.kts
android/tools/seed-generator/src/test/resources/: expected_anagram_seed.tsv  jmdict_sample.xml
scripts/: export_android_room_db.py  export_android_seed.py
src/anagram_cli/: __init__.py  cli.py  config.py  index.py  normalize.py
src/anagram_cli/lexicon/: __init__.py  jmdict.py
tests/: test_export_android_room_db.py  test_index.py  test_integration.py  test_normalize.py
(+13 files in other folders)
